[project]
name = "rft-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.5.0",
    "huggingface-hub==0.30.2",
    "ipywidgets==8.1.6",
    "matplotlib==3.10.1",
    "openai==1.75.0",
    "peft==0.15.2",
    "predibase==2025.3.2",
    "python-dotenv==1.1.0",
    "torch==2.7.0",
    "transformers==4.51.3",
]
